[gd_scene load_steps=8 format=2]

[ext_resource path="res://hud/Hud.gd" type="Script" id=1]
[ext_resource path="res://hud/keys_case_graphics.png" type="Texture" id=2]
[ext_resource path="res://keys/key_red/KeyRed.tscn" type="PackedScene" id=3]
[ext_resource path="res://keys/key_green/KeyGrenn.tscn" type="PackedScene" id=4]
[ext_resource path="res://keys/key_blue/KeyBlue.tscn" type="PackedScene" id=5]
[ext_resource path="res://hud/Unique.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]

size = 30
use_mipmaps = false
use_filter = false
font_data = ExtResource( 6 )
_sections_unfolded = [ "Extra Spacing", "Font", "Resource", "Settings" ]

[node name="Hud" type="CanvasLayer" index="0"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 8.0
margin_right = 339.0
margin_bottom = 68.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="Sprite_keys_case_background" type="Sprite" parent="MarginContainer" index="0"]

position = Vector2( 102, 27 )
texture = ExtResource( 2 )

[node name="Key_Red" parent="MarginContainer" index="1" instance=ExtResource( 3 )]

position = Vector2( 80.5936, 26.5874 )
_sections_unfolded = [ "Transform" ]

[node name="Key_Green" parent="MarginContainer" index="2" instance=ExtResource( 4 )]

position = Vector2( 108.814, 26.5395 )
_sections_unfolded = [ "Transform" ]

[node name="Key_Blue" parent="MarginContainer" index="3" instance=ExtResource( 5 )]

position = Vector2( 137.454, 26.632 )
_sections_unfolded = [ "Transform" ]

[node name="Label_info" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 80.0
margin_right = 123.0
margin_bottom = 115.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Health: "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="Label_health" type="Label" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 103.0
margin_top = 80.0
margin_right = 210.0
margin_bottom = 115.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]


